test/conformance/chainsaw/mutating-policies/context/resource/get/deployment-no-pod-mutated-namespaced.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-no-pod
  namespace: test-no-pod
  labels:
    app: nginx
    env: unknown
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: mirror.gcr.io/library/nginx:latest
