test/conformance/chainsaw/mutating-policies/context/resource/get/pod-namespaced.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: prod
  name: policy-pod
  namespace: test-context-get
spec:
  containers:
  - image: mirror.gcr.io/library/nginx
    imagePullPolicy: Always
    name: nginx
    resources: {}
  restartPolicy: Always
  securityContext: {}
